@@ -268,7 +268,11 @@ void MyServer::Advise()
     {
         const wxDateTime now = wxDateTime::Now();
 
-        m_connection->Advise(m_connection->m_advise, now.Format());
+        m_connection->Advise
+        (
+            m_connection->m_advise,
+            wxString::FromUTF8("\xd0\x9f\xd1\x80\xd0\xb8\xd0\xb2\xd0\xb5\xd1\x82")
+        );
 
         const wxString s = now.FormatTime() + " " + now.FormatDate();
         m_connection->Advise(m_connection->m_advise, s.mb_str(), wxNO_LEN);
